--- a/test.html
+++ b/test.html
@@ -35,8 +35,8 @@
             font-size: xx-large;
             display: flex;
             flex-direction: column;
-            
-            border-radius: 1%;
+            border: 1px solid red;
+            border-radius: 0.5%;
         }
         .part1{
             font-family: "Funnel Sans", sans-serif;
@@ -60,7 +60,7 @@
                 background-color: #1b1a36;
                 transition: background-color 0.3s ease-in, transform 0.1s linear; /* Fixed syntax */
                 cursor: pointer;
-                border-radius: 5%;
+                border-radius: 2%;
                 font-family: "Mark W05 Medium";
                 font-size: 22px;
                 
